完成編輯文章

--- a/nav_config.json
+++ b/nav_config.json
@@ -1,4 +1,14 @@
 {
+  "links": [
+    {
+      "name": "首頁",
+      "url": "index.html"
+    },
+    {
+      "name": "關於我",
+      "url": "#about"
+    }
+  ],
   "admin": {
     "brand": "內容管理系統",
     "links": [
